@@ -1,3 +1,13 @@
+2006-10-01  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Add init script to insert fuse module and mount the control
+	filesystem.  The script is installed as /etc/init.d/fuse and on
+	debian based systems (where update-rc.d is available) symlinks
+	from /etc/rc*.d/ are also installed.
+
+	* Include '#define FUSE_USE_VERSION=XX' into examples so they
+	become more self contained.
+
 2006-09-30  Miklos Szeredi <miklos@szeredi.hu>
 
 	* API changes:
